--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
+
+
+
+
+
+
+
+
+
+
 :root {
     --grid-cell-length: 3;
-    --square-size: 80px;
+    --square-size: 150px;
 }
 
 
@@ -22,7 +32,7 @@ svg {
     width: 100% ;
     height: 100% ;
     fill: none;
-    stroke: currentColor; 
+    stroke: purple; 
     stroke-width: 2 ;
     stroke-linecap: round;
     stroke-linejoin: round;
@@ -32,6 +42,11 @@ svg.octagon, svg.triangle {
     width: 80%;
     height: 80%;
     padding: 10%;
+}
+
+circle {
+    width: 100%;
+    height: 100%;
 }
 
 button {
@@ -112,4 +127,22 @@ button {
 
 #grid>.right {
     border-right: transparent;
+}
+
+dialog {
+    min-width: 50%;
+    font-size: 18px;
+}
+
+select {
+    font-size: 18px;
+}
+
+#startForm {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+}
+
+#player1, #player2 {
+    width: 180px;
 }
